# toknx

./: .env.example  .env.production.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.shared-traefik.yml  docker-compose.yml  install-node.sh  pyproject.toml
apps/coordinator/: Dockerfile  pyproject.toml
apps/coordinator/src/toknx_coordinator/: main.py
apps/coordinator/src/toknx_coordinator/api/: deps.py
apps/coordinator/src/toknx_coordinator/api/routes/: account.py  auth.py  consumer.py  nodes.py  public.py
apps/coordinator/src/toknx_coordinator/core/: config.py
apps/coordinator/src/toknx_coordinator/db/: models.py  session.py
apps/coordinator/src/toknx_coordinator/services/: credit_units.py  credits.py  events.py  job_router.py  model_registry.py  security.py
apps/dashboard/: Dockerfile  package.json  svelte.config.js
apps/dashboard/src/: app.d.ts
apps/dashboard/src/lib/: mock-dashboard.ts  types.ts
apps/dashboard/src/routes/: +page.server.ts  +page.svelte
apps/node-cli/: pyproject.toml
apps/node-cli/src/toknx_node/: auth_flow.py  cli.py  client.py  config.py  runner.py
apps/node-cli/src/toknx_node.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: production-checklist.md  toknx.md  toknx_v1.md  vps-deployment.md
infra/grafana/provisioning/dashboards/: dashboard.yml  toknx-overview.json
infra/prometheus/: prometheus.yml
infra/traefik/: dynamic.yml
tests/: conftest.py  smoke_test.sh  test_account_routes.py  test_auth_routes.py  test_cli.py  test_consumer_routes.py  test_credits.py  test_job_router.py  test_model_registry.py  test_node_config.py  test_node_runner.py  test_nodes_routes.py  test_security.py
