[project]
name = "toknx-monorepo"
version = "0.1.0"
description = "ToknX v1 monorepo"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = [
  "apps/coordinator/src",
  "apps/node-cli/src",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.uv.workspace]
members = [
    "apps/coordinator",
    "apps/node-cli",
]

[tool.uv.sources]
toknx-coordinator = { workspace = true, editable = true }
toknx-node = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "greenlet>=3.3.2",
    "pytest>=9.0.2",
    "toknx-coordinator",
    "toknx-node",
]

